--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/dompurify": "^2.3.3",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.180",
     "@types/node": "^16.11.26",
@@ -18,6 +19,7 @@
     "axios": "^0.26.1",
     "classnames": "^2.3.1",
     "dayjs": "^1.11.0",
+    "dompurify": "^2.3.6",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
